--- a/mvc-thymeleaf/src/main/webapp/WEB-INF/templates/hello.html
+++ b/mvc-thymeleaf/src/main/webapp/WEB-INF/templates/hello.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SpringMVC5+Thymeleaf示例</title>
 </head>
 <body>
-<h1>Spring MVC + Thymeleaf Hello World example</h1>
+<h1>Spring MVC + Thymeleaf Hello World example示例</h1>
 <p th:text="${message}"></p>
 </body>
 </html>
