--- a/data-jdbc/src/main/webapp/WEB-INF/templates/index.html
+++ b/data-jdbc/src/main/webapp/WEB-INF/templates/index.html
@@ -5,6 +5,11 @@
     <title>首页</title>
 </head>
 <body>
-    <a href="/user/get/1">显示用户id=1的用户信息</a>
+    <div>
+        <a href="/user/get/1">显示用户id=1的用户信息</a>
+    </div>
+    <div>
+        <a href="/user/list">显示所有的用户信息Rest</a>
+    </div>
 </body>
 </html>
