--- a/security-web/src/main/webapp/WEB-INF/templates/index.html
+++ b/security-web/src/main/webapp/WEB-INF/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Spring Security Demo</h1>
-<p th:text="${message}"></p>
+<p th:text="${message}"></p><br/>
+<a href="/user/index">this link is for admin only</a>
 </body>
 </html>
