--- a/security-web/src/main/webapp/WEB-INF/templates/userInfo.html
+++ b/security-web/src/main/webapp/WEB-INF/templates/userInfo.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>This is user info page!</h1>
+<br/>
+<a href="/">Home</a>
+<div>
+    <a href="/logout">Logout</a>
+</div>
 </body>
 </html>
